methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:1: error: too many arguments for method fairev: ()Unit
override def run() {avance(2);fairev(Color.YELLOW)
                                    ^